# Crimson-Engine-FromScratch

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  CMakePresets.json  README.md
include/: Engine.h  ImGuiManager.h  VulkanContext.h
src/: Engine.cpp  ImGuiManager.cpp  VulkanContext.cpp  main.cpp
